# vshell

./: README.md  main.py  pyproject.toml
vshell/: __init__.py
vshell/commands/: py.py  rm.py  run.py
